deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-limiting
  namespace: rate-limiting
spec:
  selector:
    matchLabels:
      app: rate-limiting
  template:
    metadata:
      labels:
        app: rate-limiting
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: rate-limiting
        image: registry.rancher.valensas.com/interns/rate-limit:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: http
---
apiVersion: v1
kind: Service
metadata:
  name: rate-limiting
spec:
  selector:
    app: rate-limiting
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rate-limiting
spec:
  rules:
  - host: rate-limiter.rancher.valensas.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rate-limiting
            port:
              number: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiremock
  namespace: rate-limiting
spec:
  selector:
    matchLabels:
      app: wiremock
  template:
    metadata:
      labels:
        app: wiremock
    spec:
      containers:
      - name: wiremock
        image: registry.rancher.valensas.com/interns/wiremock/v4
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: wiremock
spec:
  selector:
    app: wiremock
  ports:
  - port: 9999
    targetPort: 8080
    name: http
